--- a/contact page.html
+++ b/contact page.html
@@ -135,6 +135,15 @@
         height: 300px;
       }
     }
+    @media (max-width: 480px) {
+      .contact-section {
+        flex-direction: column;
+      }
+      
+      #map {
+        height: 300px;
+      }
+    }
   </style>
 </head>
 <body>
