--- a/contact page.html
+++ b/contact page.html
@@ -173,7 +173,7 @@
         
         <div class="map-container">
           <h2>Find Us on Google Maps</h2>
-          <div id="map"></div>
+          <div id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.59124098985!2d30.641288474036575!3d0.6112965635065176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1763b13685947bc9%3A0xb01614b235eb9d51!2sAsaba%20Classic%20supermarket!5e0!3m2!1sen!2sug!4v1744124263681!5m2!1sen!2sug" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         </div>
       </div>
       
@@ -240,7 +240,7 @@
 
   <!-- Load Google Maps API -->
   <!-- Replace YOUR_API_KEY with your actual Google Maps API key -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+
   
   <script>
     // JavaScript to handle form submission and validation
