--- a/services.html
+++ b/services.html
@@ -88,8 +88,17 @@
       </div>
     </div>
   </section>
+  
   <footer>
-    <iframe src="https://www.google.com/maps/place/Asaba+Classic+supermarket/@0.6112912,30.6438634,17z/data=!4m14!1m7!3m6!1s0x1763b13685947bc9:0xb01614b235eb9d51!2sAsaba+Classic+supermarket!8m2!3d0.6112912!4d30.6438634!16s%2Fg%2F11rsc8ht7v!3m5!1s0x1763b13685947bc9:0xb01614b235eb9d51!8m2!3d0.6112912!4d30.6438634!16s%2Fg%2F11rsc8ht7v?entry=ttu&g_ep=EgoyMDI1MDMwMi4wIKXMDSoASAFQAw%3D%3D" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <p>&copy; 2019 Asaba Classic Supermarket. All rights reserved.</p>
+    <div class="social-media-icons">
+      <p>FOLLOW US</p>
+      <a href="https://facebook.com" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://instagram.com" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+      <a href="https://youtube.com" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+      <a href="https://twitter.com" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+      <a href="https://tiktok.com" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+    </div>
   </footer>
 </body>
 </html>
